--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "format": "./Codes/.prettier ./src -w",
+    "format": "./Codes/.btn/prettier ./src -w",
     "lint": "./Codes/.bin/eslint .src --ext .js --fix"
   },
   "keywords": [],
