--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Prasenjit"
+        "Prasenjit",
+        "prasenjitdas"
     ],
     "editor.fontSize": 12,
     "editor.fontFamily": "'Cascadia Code'",
